tests/invalid_syntax/test_global_statement.aphi
/*
Parser error: Assignment statement at global scope.
Statements can only appear inside procedure bodies.
*/

int x;
x = 5;

procedure main {
}
